--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,17 @@
-aiogram==2.20
 aiohttp==3.8.1
+aiopg==1.3.3
 aiosignal==1.2.0
 async-timeout==4.0.2
 attrs==21.4.0
 Babel==2.9.1
-certifi==2022.5.18.1
 charset-normalizer==2.0.12
 frozenlist==1.3.0
+greenlet==1.1.2
+gunicorn==20.1.0
 idna==3.3
 multidict==6.0.2
+psycopg2-binary==2.9.3
+python-dotenv==0.20.0
 pytz==2022.1
+SQLAlchemy==1.4.37
 yarl==1.7.2
